--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-snackbar-dialog-options",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "A react native snackbar IOS /  ANDROID",
   "main": "dist/index.js",
   "scripts": {
@@ -67,7 +67,8 @@
     "react-mixin": "^3.0.0",
     "react-native-root-siblings": "^1.1.2",
     "react-timer-mixin": "^0.13.3",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "react-native-linear-gradient": "^2.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^7.1.1",
